# vector-db-api

./: .gitignore  Dockerfile  Dockerfile.test  LICENSE  Makefile  README.md  docker-compose.test.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py
app/api/: __init__.py  deps.py
app/api/v1/: __init__.py  api.py  chunks.py  documents.py  libraries.py  vector_db.py
app/core/: __init__.py  cohere.py  vector_db.py
app/db/: __init__.py  base.py  session.py
app/db/repositories/: __init__.py  base.py  chunk.py  document.py  library.py
app/models/: __init__.py  api.py  base.py  chunk.py  document.py  library.py  vector.py
app/services/: __init__.py  chunk_service.py  document_service.py  library_service.py  vector_db_service.py
data/: curated_master-thesis.txt  short_curated_master-thesis.txt
scripts/: populate_db.py  populate_db.sh  reset_db.py
tests/: conftest.py  test_core.py
tests/test_services/: test_chunk_service.py  test_document_service.py  test_library_service.py  test_vector_db_service.py
